<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_line"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enterURLSection">
        <TextView
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url"/>
        <EditText
            android:id="@+id/enteredURL"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/popup_text"
            android:layout_gravity="left|center_vertical" />
    </LinearLayout>
    <com.jmw.rd.oddplay.widgets.SmallButton
        android:id="@+id/submitUrlButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_below="@+id/enterURLSection"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"/>
    <com.jmw.rd.oddplay.widgets.SmallButton
        android:id="@+id/enterUrlDismissButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dismiss"
        android:layout_below="@+id/submitUrlButton"
        android:layout_alignEnd="@+id/enterURLSection" />
</RelativeLayout>
