<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_line"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/feedNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/searchString"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/searchTermText"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/feedNameLabel"
        android:gravity="center_horizontal" />
    
    <ListView
        android:id="@+id/feedsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/subscribeToEpisodeButton"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/searchTermText"
        android:layout_marginBottom="6dp"
        android:background="@drawable/border_line"
        android:divider="@color/divider"
        android:dividerHeight="1dp"
        android:drawSelectorOnTop="false"
        android:padding="1dp" />

    <com.jmw.rd.oddplay.widgets.SmallButton
        android:id="@+id/subscribeToEpisodeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:enabled="false"
        android:layout_marginStart="5dp"
        android:text="@string/addSelected" />

    <com.jmw.rd.oddplay.widgets.SmallButton
        android:id="@+id/dismissButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:text="@string/dismiss" />

</RelativeLayout>