<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_line"
    android:padding="5dp">

    <ImageView
        android:id="@+id/feedDetailImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/feedImage" />

    <TextView
        android:id="@+id/feedDetailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/feedDetailImage"
        android:text=""
        android:textColor="@color/name"
        android:textSize="16sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/feedDetailNumberEpisodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/feedDetailTitle"
        android:layout_toEndOf="@id/feedDetailImage"
        android:text=""
        android:textColor="@color/number_episodes_text" />

    <TextView
        android:id="@+id/feedDetailUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/feedDetailTitle"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/feedDetailImage"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/feedDetailLastPublishDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/feedDetailUrl"
        android:text=""
        android:textColor="@color/episode_date" />

    <CheckBox
        android:id="@+id/prioritizeFeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/feedDetailLastPublishDate"
        android:layout_toStartOf="@+id/feedDetailCancelButton"
        android:button="@drawable/checkbox_selector"
        android:padding="6dp"
        android:layout_marginStart="6dp"
        android:text="@string/pushEpisodesToTop"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/skipFirstLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prioritizeFeed"
        android:orientation="horizontal"
        android:padding="6dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/skipFirstLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/skipFirst"
            android:textColor="@color/white"
            android:textIsSelectable="true"
            android:textSize="16sp"
            android:labelFor="@+id/skipFirstInput"/>

        <EditText
            android:id="@id/skipFirstInput"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:inputType="number"
            android:textColor="@color/white"
            android:background="@drawable/edit_background"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:layout_weight="0.01" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/secondsOfEpisode"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/skipLastLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skipFirstLayout"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/skipLast"
            android:textColor="@color/white"
            android:textIsSelectable="true"
            android:textSize="16sp"
            android:labelFor="@+id/skipLastInput"/>

        <EditText
            android:id="@id/skipLastInput"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:inputType="number"
            android:textColor="@color/white"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:background="@drawable/edit_background"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/secondsOfEpisode"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/disableFeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/skipLastLayout"
        android:layout_toStartOf="@id/feedDetailCancelButton"
        android:button="@drawable/checkbox_selector"
        android:padding="6dp"
        android:layout_marginStart="6dp"
        android:text="@string/disableFeed"
        android:textColor="@color/white" />

    <com.jmw.rd.oddplay.widgets.SmallButton
        android:id="@+id/feedDetailDownloadOlderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/disableFeed"
        android:text="@string/downloadOlderEpisodes" />

    <com.jmw.rd.oddplay.widgets.SmallButton
        android:id="@+id/feedDetailCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/feedDetailNumberEpisodes"
        android:layout_alignTop="@+id/feedDetailDownloadOlderButton"
        android:text="@string/dismiss" />


</RelativeLayout>

