<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="#ff000000"
    android:focusableInTouchMode="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/playDisplayPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FF000000"
        android:layout_weight="1"
        android:layout_marginBottom="4dp"
        android:clickable="true"/>

    <RelativeLayout
        android:id="@+id/playSide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border_line"
        android:padding="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/backButton"
            android:layout_marginBottom="5dp"
            android:background="@drawable/border_line">

            <ImageView
                android:id="@+id/playStateImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:background="@drawable/to_play_transition"
                android:contentDescription="@string/playImageLabel"
                android:src="@drawable/plain_button" />

            <ImageView
                android:id="@+id/blockerImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/blockerImageLabel"
                android:src="@drawable/blocker" />

            <ImageView
                android:id="@+id/pausePlayImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/pausePlayImageResource"
                android:src="@drawable/pause_only" />
        </RelativeLayout>

        <com.jmw.rd.oddplay.widgets.SmallButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/progressBar"
            android:text="@string/rewindButtonLabel"
            android:textStyle="bold"
            android:textSize="24sp" />

        <com.jmw.rd.oddplay.widgets.SmallButton
            android:id="@+id/forwardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/progressBar"
            android:layout_alignParentEnd="true"
            android:text="@string/fastForwardButtonLabel"
            android:textStyle="bold"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/timingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/forwardButton"
            android:layout_toEndOf="@+id/backButton"
            android:layout_toStartOf="@+id/forwardButton"
            android:height="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal|top"
            android:textAlignment="center"
            android:textColor="#ffb5b5b5"
            android:textSize="16sp"
            android:textStyle="normal"
            android:layout_above="@+id/countText" />

        <TextView
            android:id="@+id/countText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom"
            android:textAlignment="center"
            android:textColor="#ffffffff"
            android:textSize="16dp"
            android:layout_above="@id/progressBar"
            android:layout_alignParentStart="true" />

        <SeekBar
            android:id="@id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:progressDrawable="@drawable/custom_seek_bar"
            android:thumb="@drawable/custom_thumb"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:thumbOffset="0dp"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
</LinearLayout>
